--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/chart.js": "^2.9.24",
+    "@types/html2canvas": "0.0.35",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.58",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "chart.js": "^2.9.3",
+    "html2canvas": "^1.0.0-rc.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
